# Calibration-of-kinematic-parametrs-and-velocities-estimation-of-mobile-robots-using-a-lowFreq-lidar

./: .gitignore  ChngesMadeforMac.txt  LICENSE
icp git explanation/: notebooks_icp.ipynb at master · niosus_notebooks · GitHub.html
icp git explanation/notebooks_icp.ipynb at master · niosus_notebooks · GitHub_files/: behaviors-58a551397b93.js  diffs-4da9bcacb4ee.js  github-elements-03f4528b950b.js  global-aebfde800b6c.css  ipynb.html  sessions-1c1847a1f1dd.js  vendors-node_modules_primer_view-components_app_components_primer_primer_js-node_modules_gith-6a1af4-a9dbd8658902.js  wp-runtime-b0208882aebc.js
simulator/: CMakeLists.txt  Noise_coupled_calibrate_test.cpp  Trajec_verify.cpp  coupled_calibrate_test.cpp  coupled_calibrator.cpp  eigen_micp_2d.cpp  eigen_micp_2d.h  eigen_micp_2d_utils.cpp  eigen_orig_micp_2d.h  mysimtest.cpp  mysimtest_generic_multiple_velocities.cpp  mysimtest_multiple_velocities.cpp  myvalidate.cpp  myvalidate_connected_scans.cpp  noisy_micp.cpp  optimal_trajec_verify.cpp  robot_visualizer  robot_visualizer.cpp  rotations.h  simulator.cpp  simulator.h
simulator/junk code/: exec_flow.sh  mysimtest_mod.cpp  norm.py  openai.cpp  simulator_test.cpp  sum_matrices.cpp
simulator/junk code/revert to this version/: eigen_micp_2d.cpp  eigen_micp_2d.h  myvalidate.cpp
simulator/multiple v calibrator/: CMakeLists.txt  Multiple_Traj_generate.cpp  calibratemul.cpp  calibratemul.h  calibratemul_test.cpp  decoupled_calibration_micp.cpp  readme.txt
simulator/single v calibrator/: CMakeLists.txt  calibrator.cpp  calibrator.h  calibrator_test.cpp  calibrator_v.cpp  readme.txt
test_play_field_folder/: CMakeLists.txt  eigen_micp_2d.cpp  eigen_micp_2d.h  eigen_micp_2d_test.cpp  eigen_micp_2d_utils.cpp  eigen_micp_2d_utils.h  lines.cpp  mysimtest.cpp  myvalidate.cpp  simulator.cpp  simulator.h
